test/org/midica/testfiles/failing/eff-flow-eff-already-set.midica
INCLUDE inc/instruments.midica


0: vol.wait().vol.set(50)

